--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0",
     "three": "^0.181.1"
   },
   "devDependencies": {
