--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.2.7",
+    "terser": "^5.46.0",
     "vite": "^7.0.0"
   }
 }
